fix home works section conflicts. problem was an overlooked custom structural wrap in functions.php

--- a/assets/scss/partials/_widgets.scss
+++ b/assets/scss/partials/_widgets.scss
@@ -156,6 +156,7 @@ Widgets
 .logos {
 	background: $white;
 	padding: 40px 0 20px;
+	text-align: center;
 } 	
 
 .logos .widget {
