--- a/style-rtl.css
+++ b/style-rtl.css
@@ -1297,6 +1297,7 @@ Widgets
 .logos {
   background: #fff;
   padding: 40px 0 20px;
+  text-align: center;
 }
 
 .logos .widget {
